--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Hello, world webauthn</title>
     <script src="https://cdn.jsdelivr.net/npm/cbor-js@0.1.0/cbor.js" integrity="sha256-QAEwOLpcmrNELyKVU6o13Q1Rtlj9/E3bod4qq1EC2cA=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <!--
+        <script src="index.js"></script>
+    -->
+    <script src="https://cdn.jsdelivr.net/gh/lemon-mint/webauthn-demo-client@0.0.1/index.min.js" integrity="sha256-I8g5UHG/YNwnKWHhLAcryT253YjdT9+/OZ5JfMNrob0=" crossorigin="anonymous"></script>
     <style>
         html {
             background-color: lightslategray;
