--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--
         <script src="index.js"></script>
     -->
-    <script src="https://cdn.jsdelivr.net/gh/lemon-mint/webauthn-demo-client@0.0.2/index.min.js" integrity="sha256-I8g5UHG/YNwnKWHhLAcryT253YjdT9+/OZ5JfMNrob0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/gh/lemon-mint/webauthn-demo-client@v0.0.2/index.min.js" integrity="sha256-I8g5UHG/YNwnKWHhLAcryT253YjdT9+/OZ5JfMNrob0=" crossorigin="anonymous"></script>
     <style>
         html {
             background-color: lightslategray;
