--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body style="background-color: lightslategray;">
     <div class="container" style="background-color: lightslategray;">
-        <h1>Hello, Webauthn</h1>
+        <h1 class="mt-2">Hello, Webauthn</h1>
 
         SiteName: <input type="text" class="form-control" id="sitename" value="Webauthn Demo"><br>
         Username: <input type="text" class="form-control" id="username" value="User001"><br>
